--- a/Agrobotfarms_web/charts.html
+++ b/Agrobotfarms_web/charts.html
@@ -111,7 +111,6 @@
                                     <li><a target="_blank" href="wiki.html">Wiki
                                         </a></li>
                                     <li><a target="_blank"
-                                            href="https://market.agrobotfarms.com/">Marketplace</a></li>
                                     <li><a href="extensions.html">Extensions</a></li>
                                     <li><a  href="detect.html">Detect</a></li>
                                     <li><a href="analysis.html">Analysis</a></li>
@@ -148,7 +147,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/charts/1?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&type=line&update=15"
+                            src="https://thingspeak.com/channels/2219415/charts/1?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&title=Temperature+%28%C2%BAC%29&type=line"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
@@ -161,7 +160,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/charts/2?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&type=line&update=15"
+                            src="https://thingspeak.com/channels/2219415/charts/2?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&title=Humidity%28%25%29&type=line"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
@@ -174,7 +173,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/charts/3?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&type=line&update=15"
+                            src="https://thingspeak.com/channels/2219415/charts/3?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&title=Soil+Moisture&type=line"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
@@ -187,7 +186,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/charts/4?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&type=line&update=15"
+                            src="https://thingspeak.com/channels/2219415/charts/4?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&title=Rain+Sensor&type=line"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
@@ -200,7 +199,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/charts/5?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&type=line&update=15"
+                            src="https://thingspeak.com/channels/2219415/charts/5?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&title=Pressure+%28Pa%29&type=line"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
@@ -213,7 +212,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/charts/6?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&type=line&update=15"
+                            src="https://thingspeak.com/channels/2219415/charts/6?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&title=Altitude+%28m%29&type=line"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
@@ -226,7 +225,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/charts/7?bgcolor=%23ffffff&color=%234ad4a1&dynamic=true&results=60&type=line&update=15"
+                            src="https://thingspeak.com/channels/2219415/widgets/685331"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
@@ -279,7 +278,6 @@
                             <ul class="menu_footer">
                                 <li><a href="/">Home</a></li>
                                 <li><a href="wiki.html">Wiki</a></li>
-                                <li><a href="https://market.agrobotfarms.com/">Marketplace</a></li>
                                 <li><a href="extensions.html">Extensions</a></li>
                             </ul>
                         </div>
