--- a/Agrobotfarms_web/charts.html
+++ b/Agrobotfarms_web/charts.html
@@ -225,7 +225,7 @@
                     <div class="services_box_man">
                         <div class="services_bo text_align_left">
                             <iframe
-                            src="https://thingspeak.com/channels/2219415/widgets/685331?title=Rain_falling"
+                            src="https://thingspeak.com/channels/2219415/widgets/685331"
                             height="260px"
                             width="450px"
                             class="rounded border-solid border border-#cccccc-900"
