feat: added marketplace

--- a/Agrobotfarms_web/src/signin.html
+++ b/Agrobotfarms_web/src/signin.html
@@ -11,7 +11,7 @@
   <title>Log In</title>
 </head><body class="container">
   <nav>
-    <img src="img/logo.jpg" alt="">
+    <img src="../images/logo.png" alt="">
   </nav>
   <hr>  
   <section class="left">
@@ -19,7 +19,7 @@
       <img src="img/signin.svg" alt="">
     </div>
     <div class="nav">
-      <img src="img/logo.jpg" alt="">
+      <img src="../images/logo.png" alt="">
     </div>
   </section>
   <section class="right">
