feat: added marketplace

--- a/Agrobotfarms_web/src/add-produce.html
+++ b/Agrobotfarms_web/src/add-produce.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="BloomFarm - The Digital Marketplace for Farm Produce" />
     <meta name="description" content="BloomFarm -The Digital Marketplace for Farm Produce" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/favicon.jpg" />
+    <link rel="shortcut icon" href="../images/logo.png" />
     <link rel="apple-touch-icon" href="img/favicon.jpg" />
     <link rel="apple-touch-icon" sizes="72x72" href="img/favicon.jpg" />
     <link rel="apple-touch-icon" sizes="114x114" href="img/favicon.jpg" />
@@ -47,7 +47,7 @@
     </section>
     <nav>
         <button class="openbtn" onclick="openNav()">☰</button>
-        <img src="img/content/logo.jpg" alt="">
+        <img src="../images/logo.png" alt="">
       </nav>
       <hr> 
       <section class="right">
