--- a/Agrobotfarms_web/src/consumer-dashboard.html
+++ b/Agrobotfarms_web/src/consumer-dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/favicon.jpg" />
+    <link rel="shortcut icon" href="../images/logo.png" />
     <link rel="stylesheet" href="css/custom.css">
     <title>Dashboard</title>
 </head>
@@ -39,12 +39,12 @@
 </section>
 <nav>
     <button class="openbtn" onclick="openNav()">☰</button>
-    <img src="img/logo.jpg" alt="">
+    <img src="../images/logo.png" alt="">
   </nav>
   <hr> 
     <section id="main" class="main">
       <h4>Hello Festus,</h4>
-      <h2>Welcome Onboard as the Latest BloomFarm Buyer</h2>  
+      <h2>Welcome Onboard as the Latest AgrobotFarms Buyer</h2>  
       <div class="centre-content">
         <div>
           <img src="img/welcome.svg">
