--- a/Agrobotfarms_web/src/farmer-dashboard.html
+++ b/Agrobotfarms_web/src/farmer-dashboard.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="author" content="BloomFarm" />
+  <meta name="author" content="AgrobotFarms" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="keywords" content="BloomFarm - The Digital Marketplace for Farm Produce" />
-  <meta name="description" content="BloomFarm -The Digital Marketplace for Farm Produce" />
+  <meta name="keywords" content="AgrobotFarms - The Digital Marketplace for Farm Produce" />
+  <meta name="description" content="AgrobotFarms -The Digital Marketplace for Farm Produce" />
   <!-- favicon -->
   <link rel="shortcut icon" href="img/favicon.jpg" />
-  <link rel="apple-touch-icon" href="img/favicon.jpg" />
+  <link rel="apple-touch-icon" href="../images/logo.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon.jpg" />
   <link rel="apple-touch-icon" sizes="114x114" href="img/favicon.jpg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,40 +19,39 @@
     <title>Dashboard</title>
 </head>
 <body class="container" id="main">
-    <section id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <ul>
-            <li><a class="active" href="#"><i class="fa fa-home"></i>Home </a></li>
-            <li><a href="#"><i class="fa fa-user-o"></i>Edit Profile</a></li>
-            <li><a href="#"><i class="fa fa-book"></i>My Produce</a></li>
-            <li><a href="#"><i class="fa fa-calendar-o"></i>Sales</a></li>
-            <li><a href="#"><i class="fa fa-bell-o"></i>Notifications</a></li>
-            <span>
-            <li><a href="#"><i class="fa fa-user-o"></i>Baba Oyo</a></li>
-            <li><a href="signin.html"><i class="fa fa-sign-out"></i>Logout</a></li>
-            </span>
-        </ul>
-    </section>
-    <section class="sidebar1">
-        <ul>
-            <li><a class="active" href="#"><i class="fa fa-home"></i>Home </a></li>
-            <li><a href="#"><i class="fa fa-book"></i>My Produce</a></li>
-            <li><a href="#"><i class="fa fa-calendar-o"></i>Sessions</a></li>
-            <li><a href="#"><i class="fa fa-bell-o"></i>Notifications</a></li>
-            <span>
-            <li><a href="#"><i class="fa fa-user-o"></i>Baba Oyo</a></li>
-            <li><a href="signin.html"><i class="fa fa-sign-out"></i>Logout</a></li>
-            </span>
-        </ul>
-    </section>
+  <section id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <ul>
+        <li><a class="active" href="#"><i class="fa fa-home"></i>Home </a></li>
+        <li><a href="#"><i class="fa fa-book"></i>My Produce</a></li>
+        <li><a href="#"><i class="fa fa-calendar-o"></i>Sessions</a></li>
+        <li><a href="#"><i class="fa fa-bell-o"></i>Notifications</a></li>
+        <span>
+        <li><a href="#"><i class="fa fa-user-o"></i>Baba Oyo</a></li>
+        <li><a href="signin.html"><i class="fa fa-sign-out"></i>Logout</a></li>
+        </span>
+    </ul>
+</section>
+<section class="sidebar1">
+    <ul>
+        <li><a class="active" href="#"><i class="fa fa-home"></i>Home </a></li>
+        <li><a href="#"><i class="fa fa-book"></i>My Produce</a></li>
+        <li><a href="#"><i class="fa fa-calendar-o"></i>Sessions</a></li>
+        <li><a href="#"><i class="fa fa-bell-o"></i>Notifications</a></li>
+        <span>
+        <li><a href="#"><i class="fa fa-user-o"></i>Baba Oyo</a></li>
+        <li><a href="signin.html"><i class="fa fa-sign-out"></i>Logout</a></li>
+        </span>
+    </ul>
+</section>
     <nav>
         <button class="openbtn" onclick="openNav()">☰</button>
-        <img src="img/logo.jpg" alt="">
+        <img src="../images/logo.png" alt="">
       </nav>
       <hr> 
     <section class="main">
       <h4>Hello Baba Oyo,</h4>
-      <h2>Welcome Onboard as the Latest BloomFarm Seller</h2> 
+      <h2>Welcome Onboard as the Latest AgrobotFarms Seller</h2> 
       <div class="centre-content">
         <div>
           <img src="img/sell.svg">
