--- a/Agrobotfarms_web/src/signin.html
+++ b/Agrobotfarms_web/src/signin.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="shortcut icon" href="img/favicon.jpg" />
+  <link rel="shortcut icon" href="../images/logo.png" />
   <link rel="stylesheet" href="./css/signup/signin.css">
   <title>Log In</title>
 </head><body class="container">
